test/week7/invalid/test2_bad_expr.c
int x;
int y = 10;
x = (y + 5) * 2;
x = (x + ) * (3 - 1);
if (x > 0) {
    x = x + (y * );
}
